@@ -438,6 +438,7 @@ def main(oem_config):
     for name in ('apt-installed', 'apt-install-direct', 'remove-kernels', 'apt-removed'):
         osextras.unlink_force(os.path.join('/var/lib/ubiquity', name))
     shutil.rmtree("/var/lib/partman", ignore_errors=True)
+    misc.remove_os_prober_cache()
 
     if oem_config and not options.query:
         disable_autologin()
